k8s/ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - demo.azure.com
    secretName: aks-ingress-tls
  rules:
  - host: demo.azure.com
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: todoapp-svc
          servicePort: 80
