k8s/ingress.yaml
# The ingress defines the path to the 3 APIs, applied for the ingress in AKS
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: todoapp-svc
          servicePort: 80
